--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,107 +1,153 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600;700&display=swap');
 
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  font-family: 'Poppins', sans-serif;
 }
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+body,
+html {
+  height: 100%;
 }
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+#__next {
+  height: 100%;
 }
-
-a {
-  color: inherit;
+nav {
+  background-image: linear-gradient(darkgrey, whitesmoke);
+}
+.container {
+  width: 90%;
+  min-height: 100px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.logo {
+  font-size: 2.5em;
+  color: #fff;
+  letter-spacing: 2px;
+}
+.dot {
+  color: rgba(0, 0, 0, 0.5);
+  font-size: 1.2em;
+}
+.tab-nav {
+  display: flex;
+  text-transform: capitalize;
+}
+.nav-item {
+  list-style: none;
+  margin: 0 10px;
+  display: flex;
+  align-items: center;
+  background-color: azure;
+  border-radius: 5px;
+  padding: 10px 20px;
+}
+li a {
   text-decoration: none;
+  color: black;
+}
+svg {
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
+}
+.active {
+  background-color: transparent;
+  border: 2px solid azure;
+  fill: #fff;
+}
+.text-white {
+  color: #fff;
+}
+footer {
+  margin-top: 30px;
+  background-image: linear-gradient(to top, darkgrey, whitesmoke, white);
+}
+.text-footer {
+  font-weight: 600;
+}
+.love {
+  color: red;
+}
+.icon-wrapper {
+  display: flex;
+}
+.icon-item {
+  list-style: none;
+}
+.ig {
+  fill: salmon;
+}
+.linked {
+  fill: darkblue;
+}
+.fb {
+  fill: blue;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+/* style add_user */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.6); /* Black w/ opacity */
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+}
+
+.item-form {
+  padding: 8px;
+  margin-bottom: 10px;
+}
+
+.btn-wrapper {
+  margin-top: 30px;
+}
+
+.btn {
+  width: 100px;
+  padding: 8px;
+  border-radius: 5px;
+  cursor: pointer;
+  background-color: transparent;
+  font-weight: 600;
+}
+
+.submit {
+  border: 2px solid limegreen;
+  color: limegreen;
+  margin-right: 10px;
+}
+
+.cancel {
+  border: 2px solid crimson;
+  color: crimson;
+  margin-left: 10px;
+}
+
+.submit:hover {
+  color: #fff;
+  background-color: limegreen;
+}
+.cancel:hover {
+  color: #fff;
+  background-color: crimson;
 }
